# sigfox-ep-rf-api-st-s2lp

./: CHANGELOG.md  CMakeLists.txt  README.md
cmake/: precompile_s2lp_rf_api.cmake  s2lp.patch
inc/board/: S2LP_CORE_SPI.h  s2lp_hw_api.h
inc/manuf/: s2lp_rf_api.h
src/board/: MCU_Interface_template.c  S2LP_CORE_SPI.c  s2lp_hw_api.c
src/manuf/: s2lp_rf_api.c
